--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,9 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+@import 'fumadocs-ui/css/neutral.css';
+@import 'fumadocs-ui/css/preset.css';
+
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
@@ -10,7 +13,7 @@
   --font-playwrite: var(--font-playwrite);
   --font-caveat: var(--font-caveat);
   --font-poppins: var(--font-poppins);
-  
+
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -47,6 +50,7 @@
   --radius-2xl: calc(var(--radius) + 8px);
   --radius-3xl: calc(var(--radius) + 12px);
   --radius-4xl: calc(var(--radius) + 16px);
+  --font-sans: var(--font-poppins), ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 :root {
@@ -122,7 +126,39 @@
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
   }
+}
+
+.sidebar-content {
+  scrollbar-width: none;
+}
+
+/* Tighten spacing for prose */
+.prose :where(h1, h2, h3, h4, h5, h6) {
+  margin-top: 1.5em;
+  margin-bottom: 0.5em;
+  line-height: 1.2;
+  font-weight: 200;
+}
+
+.prose :where(p) {
+  margin-top: 0.75em;
+  margin-bottom: 0.75em;
+}
+
+.prose :where(.callout) {
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
+.prose :where(.tabs) {
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
+#nd-toc {
+  font-family: var(--font-poppins);
 }
