--- a/app/globals.css
+++ b/app/globals.css
@@ -206,3 +206,16 @@
 code {
   font-family: var(--font-mono) !important;
 }
+
+.fd-step h3 {
+  margin-top: 0px;
+}
+
+.prose h2 {
+  margin-bottom: 10px;
+}
+
+.prose p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
